--- a/floats.css
+++ b/floats.css
@@ -2,27 +2,28 @@
     background-color: orange;
     max-width: 1200px; 
     margin: 0 auto;
+    display: grid;
+    grid-template-areas: 
+    'header header header' 
+    'menu content content'
+    'footer footer footer';
 }
 .header{
     background-color: purple;
     height: 60px;
+    grid-area: header;
 }
-.wrapper{
-    background-color: paleturquoise;
-    display: flex; /*hereda a los hijos la flexibilidad
-    haciendo que se creen "columnas*/
-    
-    /*flex-direction: row-reverse; para hacer que se invierta el flex*/
-}
+
 .menu{
     background-color: brown;
-    width: 30%;
+    grid-area: menu;
 }
 .content{
     background-color: beige;
-    width: 70%;
+    grid-area: content;
 }
 .footer{
     background-color: pink; 
+    grid-area: footer;
 }
 
